--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-click-away-listener": "^1.4.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.1",
